# smart-edu

./: .gitignore  .pre-commit-config.yaml  Dockerfile  Gemfile  package-lock.json  package.json  pyproject.toml
.github/workflows/: ci.yml
app/controllers/: admin_controller.rb  application_controller.rb  attendances_controller.rb  classrooms_controller.rb  home_controller.rb  payments_controller.rb  sessions_controller.rb  signup_controller.rb  students_controller.rb  teachers_controller.rb  users_controller.rb
app/helpers/: application_helper.rb  qr_helper.rb
app/models/: attendance.rb  attendance_quick_creation.rb  classroom.rb  homeroom.rb  payment.rb  principal_teacher_relationship.rb  school.rb  school_tier.rb  student.rb  teacher_student_relationship.rb  user.rb
app/services/: checkin_service.rb
config/: application.rb  credentials.yml.enc  deploy.yml  importmap.rb  routes.rb  tailwind.config.js
config/environments/: development.rb
config/initializers/: session_store.rb
db/: schema.rb  seeds.rb
db/migrate/: 20250119160631_create_users.rb  20250120155336_create_students.rb  20250121032003_create_attendances.rb  20250131125940_add_soft_delete_student.rb  20250208032547_add_role_and_approval_to_users.rb  20250213062915_change_default_user_role.rb  20250216045357_add_is_active_to_students.rb  20250216060259_add_section_and_grade_to_students.rb  20250216114631_create_schools.rb  20250216114632_create_classrooms.rb  20250216114633_create_homerooms.rb  (+20 more)
public/: 404.html
test/: application_system_test_case.rb  test_helper.rb
test/fixtures/: users.yml  (+4 more)
(+70 files in other folders)
