[project]
name = "smart-edu"
version = "0.1.0"
description = ""
authors = [
    {name = "Ling",email = "kanladaporn.sir@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.group.dev.dependencies]
pre-commit = "^4.1.0"
